Modelo das pastas corriers

--- a/ViewAulus/Views/Shared/_Layout.cshtml
+++ b/ViewAulus/Views/Shared/_Layout.cshtml
@@ -86,6 +86,9 @@
                         <div class="sub-nav">
                             <ul>
                                 <li>@Html.ActionLink("Category", "index", "Categories")</li>
+                                <li>@Html.ActionLink("Carrier", "index", "Carriers")</li>
+                                <li>@Html.ActionLink("Category", "index", "Categories")</li>
+                                <li>@Html.ActionLink("Category", "index", "Categories")</li>
                             </ul>
                         </div>
                     </div>
