--- a/ViewAulus/Views/Carriers/Index.cshtml
+++ b/ViewAulus/Views/Carriers/Index.cshtml
@@ -5,48 +5,54 @@
     Layout = "~/Views/Shared/_Layout.cshtml";
 }
 
-<h2>Index</h2>
+<div class="panel spacer-20">
+    <div class="panel-heading no-padding">
+        <a href="#" class="panel-expander notext fr">&nbsp;</a>
+        <h2 class="clipboard">Carrier</h2>
+    </div>
+    <div class="panel-container">
+        <div class="options">
+            <ul>
+                <li>@Html.ActionLink("New", "Create", "", new { @class = "new" })</li>
+            </ul>
+        </div>
+        <table class="table2 gn-table">
+            <tr>
+                <th>
+                    @Html.DisplayNameFor(model => model.Name)
+                </th>
+                <th>
+                    @Html.DisplayNameFor(model => model.Description)
+                </th>
+                <th colspan="2"></th>
+            </tr>
 
-<p>
-    @Html.ActionLink("Create New", "Create")
-</p>
-<table class="table">
-    <tr>
-        <th>
-            @Html.DisplayNameFor(model => model.Name)
-        </th>
-        <th>
-            @Html.DisplayNameFor(model => model.Description)
-        </th>
-        <th>
-            @Html.DisplayNameFor(model => model.CreationDate)
-        </th>
-        <th>
-            @Html.DisplayNameFor(model => model.LastUpdate)
-        </th>
-        <th></th>
-    </tr>
+            @foreach (var item in Model)
+            {
+                <tr>
+                    <td>
+                        @Html.DisplayFor(modelItem => item.Name)
+                    </td>
+                    <td>
+                        @Html.DisplayFor(modelItem => item.Description)
+                    </td>
+                    <td align="center">
+                        <a href="/Carriers/Edit/@item.Id">Edit</a>
+                    </td>
+                    <td align="left">
+                        <form action="/Carriers/Delete/@item.Id " method="post">
+                            @Html.AntiForgeryToken()
 
-@foreach (var item in Model) {
-    <tr>
-        <td>
-            @Html.DisplayFor(modelItem => item.Name)
-        </td>
-        <td>
-            @Html.DisplayFor(modelItem => item.Description)
-        </td>
-        <td>
-            @Html.DisplayFor(modelItem => item.CreationDate)
-        </td>
-        <td>
-            @Html.DisplayFor(modelItem => item.LastUpdate)
-        </td>
-        <td>
-            @Html.ActionLink("Edit", "Edit", new { id=item.Id }) |
-            @Html.ActionLink("Details", "Details", new { id=item.Id }) |
-            @Html.ActionLink("Delete", "Delete", new { id=item.Id })
-        </td>
-    </tr>
-}
+                            <a href="#" class="delete" onclick="this.parentNode.submit(); return confirm('Do you really want delete the carrier: @item.Name ?');"> Delete</a>
 
-</table>
+                        </form>
+                    </td>
+                </tr>
+            }
+            <tr>
+                <td colspan="4" align="left"></td>
+            </tr>
+        </table>
+    </div>
+</div>
+
