--- a/ViewAulus/Views/Shared/_Layout.cshtml
+++ b/ViewAulus/Views/Shared/_Layout.cshtml
@@ -2,17 +2,25 @@
 <html>
 <head>
     <meta http-equiv="Content-type" content="text/html; charset=utf-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1, user-scalable=no">
     <title>F&amp;D PLASTICS | Exellence In Color</title>
     <link rel="shortcut icon" type="image/x-icon" href="~/css/images/favicon.ico" />
+
+    <link rel="stylesheet" href="https://cdn.datatables.net/1.10.16/css/jquery.dataTables.min.css" type="text/css" media="all" />
+
+
     <link rel="stylesheet" href="~/css/style.css" type="text/css" media="all" />
     <link rel="stylesheet" href="~/css/facebox.css" type="text/css" media="all" />
-    <!--[if IE 6]><link rel="stylesheet" href="css/ie6.css" type="text/css" media="all" /><![endif]-->
-    
-    <meta name="viewport" content="width=device-width, initial-scale=1">
-    @*<script src="https://ajax.googleapis.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>*@
-    
-    <script src="~/Scripts/jquery-3.2.1.min.js"></script>
-    <script src="~/Scripts/bootstrap.min.js"></script>
+    <!--[if IE 6]><link rel="stylesheet" href="~/css/ie6.css" type="text/css" media="all" /><![endif]-->
+
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.12.4/jquery.min.js"></script>
+    <!-- <script src="js/jquery.js" type="text/javascript"></script> -->
+    <script src="~/js/facebox.js" type="text/javascript"></script>
+    <script src="~/js/jquery-fns.js" type="text/javascript"></script>
+
+
+    <script src="https://cdn.datatables.net/1.10.16/js/jquery.dataTables.min.js"></script>
+    <script src="https://cdn.datatables.net/responsive/2.2.0/js/dataTables.responsive.min.js"></script>
     
     <script type="text/javascript">
     $(function () {
@@ -26,7 +34,6 @@
             }
         });
     });
-
     </script>
 
 
@@ -38,19 +45,19 @@
         <div id="header">
             <!-- Shell -->
             <div class="shell">
-                <a href="#" class="menu-opener"><span></span></a>
                 <!-- Logo -->
                 <h1 id="logo" class="fl notext"><a href="#">F&amp;D PLASTICS | Exellence In Color</a></h1>
                 <!-- END Logo -->
                 <!-- Header Right -->
                 <div class="header-right fr">
                     <ul class="fr">
+
                         <li class="last">
                             <!-- Utility -->
                             <div class="utility">
                                 <div class="blue-box">
                                     <div class="blue-box-r">
-                                        <p><strong>Olá Aulus</strong><span>|</span><a href="#" class="logout">Sair »</a></p>
+                                        <p><strong>Aulus</strong><span>|</span><a href="#" class="logout">Sair »</a></p>
                                     </div>
                                 </div>
                             </div>
@@ -63,76 +70,49 @@
             <!-- END Shell -->
         </div>
         <!-- END Header -->
-        <div id="content">
-            <!-- Shell -->
-            <div class="shell">
-                <!-- Navigation -->
-                <div id="navigation">
-                   <ul class="nav nav-tabs">
-                        <li><a data-toggle="tab" href="#table">Table</a></li>
-                        <li><a data-toggle="tab" href="#maintain">Maintain</a></li>
-                        <li><a data-toggle="tab" href="#tasks">Tasks</a></li>
-                        <li><a data-toggle="tab" href="#reports">Reports</a></li>
-                        @*<li><a href="#">Administration</a></li>
-                        <li><a href="#">Registration</a></li>
-                        <li><a href="#">Formulas</a></li>
-                        <li class="last"><a href="#">FAQ</a></li>*@
+        <nav id='cssmenu'>
+            <div id="head-mobile"></div>
+            <div class="nav-mobile"></div>
+            <ul class="shell">
+                <li>
+                    <a href='#'>Table</a>
+                    <ul>
+                        <li>@Html.ActionLink("Category", "index", "Categories")</li>
+                        <li>@Html.ActionLink("Carrier", "index", "Carriers")</li>
+                        <li>@Html.ActionLink("Opacity", "index", "Opacities")</li>
+                        <li>@Html.ActionLink("Packaging", "index", "Packagings")</li>
+                        <li>@Html.ActionLink("Pellet", "index", "Pellets")</li>
+                        <li><a href='#'>Sub Item</a>
+                            <ul><li><a href='#'>Item 1</a></li></ul>
+                        </li>
                     </ul>
-                </div>
-                <!-- END Navigation -->
-                <!-- Sub Navigation -->
-                <div class="tab-content">
-                    <div id="table" class="tab-pane fade">
-                        <div class="sub-nav">
-                            <ul>
-                                <li>@Html.ActionLink("Category", "index", "Categories")</li>
-                                <li>@Html.ActionLink("Carrier", "index", "Carriers")</li>
-                                <li>@Html.ActionLink("Opacity", "index", "Opacities")</li>
-                                <li>@Html.ActionLink("Packaging", "index", "Packagings")</li>
-                                <li>@Html.ActionLink("Pellet", "index", "Pellets")</li>
-                                
-                            </ul>
-                        </div>
-                    </div>
-                    <div id="maintain" class="tab-pane fade">
-                        <div class="sub-nav">
-                            <ul>
-                                <li>@Html.ActionLink("Customer", "index", "Customers")</li>
-                                <li>@Html.ActionLink("Customer Resin", "index", "CustomerResins")</li>
-                                <li>@Html.ActionLink("Target Type", "index", "TargetTypes")</li>
-                                <li><a href="#">Defaults</a></li>
-                                <li><a href="#">Employee</a></li>
-                                <li><a href="#">Supplier</a></li>
-                                <li>@Html.ActionLink("Raw Material", "index", "RawMaterials")</li>
-                            </ul>
-                        </div>
-                    </div>
-                    <div id="tasks" class="tab-pane fade">
-                        <div class="sub-nav">
-                            <ul>
-                                <li>@Html.ActionLink("Color Match Request", "index", "ColorMatchRequests")</li>
-                            </ul>
-                        </div>
-                    </div>
-                    <div id="reports" class="tab-pane fade">
-                        <div class="sub-nav">
-                            <ul>
-                                <li><a href="#"></a></li>
-                                @*<li><a href="#">Production</a></li>
-                                <li><a href="#">Priorities</a></li>
-                                <li><a href="#">Administration Pages</a></li>
-                                <li><a href="#">Client Central</a></li>
-                                <li><a href="#">Color Match Request</a></li>
-                                <li class="last"><a href="#">Customer Services</a></li>*@
-                            </ul>
-                        </div>
-                    </div>
-                </div>
-                
-                <!-- END Sub Navigation --> 
-            </div>
-            <!-- END Shell -->
-        </div>
+                </li>
+                <li>
+                    <a href='#'>Maintain</a>
+                    <ul>
+                        <li>@Html.ActionLink("Customer", "index", "Customers")</li>
+                        <li>@Html.ActionLink("Customer Resin", "index", "CustomerResins")</li>
+                        <li>@Html.ActionLink("Target Type", "index", "TargetTypes")</li>
+                        <li><a href="#">Defaults</a></li>
+                        <li><a href="#">Employee</a></li>
+                        <li><a href="#">Supplier</a></li>
+                        <li>@Html.ActionLink("Raw Material", "index", "RawMaterials")</li>
+                    </ul>
+                </li>
+                <li>
+                    <a href='#'>Tasks</a>
+                    <ul>
+                        <li>@Html.ActionLink("Color Match Request", "index", "ColorMatchRequests")</li>
+                    </ul>
+                </li>
+                <li>
+                    <a href='#'>Reports</a>
+                    <ul>
+                         <li><a href='#'>Report 1</a></li>
+                    </ul>
+                </li>
+            </ul>
+        </nav>
 
         <!--Content-->
         <div id="content">
@@ -154,7 +134,7 @@
         <div id="footer">
             <!-- Shell -->
             <div class="shell">
-                <p class="ac">&copy; Copyright 2009-2010 - All rights reserved. F&amp;D Plastics Administrative Panel - Design by <a href="#">Dellustrations.com</a></p>
+                <p class="ac">&copy; Copyright 2009-2010 - All rights reserved. F&amp;D Plastics Administrative Panel - Design by <a href="#">Stories</a></p>
             </div>
             <!-- END Shell -->
         </div>
