--- a/ViewAulus/Views/Customers/Index.cshtml
+++ b/ViewAulus/Views/Customers/Index.cshtml
@@ -48,7 +48,7 @@
                     </td>
 
                     <td>
-                        @Html.DisplayNameFor(model => model.LastName)
+                        @Html.DisplayFor(modelItem => item.LastName)
                     </td>
                     
 
