--- a/ViewAulus/Views/Shared/_Layout.cshtml
+++ b/ViewAulus/Views/Shared/_Layout.cshtml
@@ -17,10 +17,11 @@
     <!-- <script src="js/jquery.js" type="text/javascript"></script> -->
     <script src="~/js/facebox.js" type="text/javascript"></script>
     <script src="~/js/jquery-fns.js" type="text/javascript"></script>
-
+   
 
     <script src="https://cdn.datatables.net/1.10.16/js/jquery.dataTables.min.js"></script>
     <script src="https://cdn.datatables.net/responsive/2.2.0/js/dataTables.responsive.min.js"></script>
+  
     
     <script type="text/javascript">
     $(function () {
@@ -82,6 +83,7 @@
                         <li>@Html.ActionLink("Opacity", "index", "Opacities")</li>
                         <li>@Html.ActionLink("Packaging", "index", "Packagings")</li>
                         <li>@Html.ActionLink("Pellet", "index", "Pellets")</li>
+                        <li>@Html.ActionLink("Employee", "index", "Employees")</li>
                         @*<li><a href='#'>Sub Item</a>
                             <ul><li><a href='#'>Item 1</a></li></ul>
                         </li>*@
